CLDR-11228 ST: notify TC of forum responses; preliminary clean-up
-Fix compiler warnings/suggestions